feat(compiler): add basic SMTP send / POP3S read email support
Adds Smtp (STARTTLS on 587 via the third-party ESP_SSLClient library)
and Pop3Client (implicit-TLS POP3S on 995 via the native WiFiSSLClient,
message count / newest message / a message's subject) as new compiler
intrinsics, plus a juno:install-deps Maven goal to provision optional
Arduino libraries in one step. Includes three juno-examples programs
(InboxCount, EmailHelloWorld, EmailClient) verified end-to-end on real
UNO R4 WiFi hardware, and new docs/EMAIL.md and docs/APIS.md guides
(the latter consolidating API-architecture explanations previously
duplicated in docs/INTERNET.md).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>